fix top logo vertical align

--- a/navbar-style.sass
+++ b/navbar-style.sass
@@ -73,6 +73,7 @@ body
                 margin: 0 5px !important
                 
         &#sponsors-nav
+            vertical-align: bottom !important
             position: relative !important
             margin: 0 20px !important
             top: 5px !important
